--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
-  application.name:  splearn
+  application.name: splearn
   jpa:
     show-sql: true
+    hibernate:
+      ddl-auto: update
